--- a/monowar.css
+++ b/monowar.css
@@ -61,6 +61,7 @@ img.right {
 /* Header and navigation styles */
 #container {
   width: 760px;
+  height: auto;
   margin: 0 auto;
   text-align: left;
   background: #ffffff;
@@ -95,19 +96,22 @@ img.right {
 #navigation {
   height: 2.2em;
   line-height: 2.2em;
-  width: 760px;
+  margin: 0;
+  width: auto;
   background: #578bb8;
   color: #ffffff;
+  
 }
 #navigation li {
   float: left;
   list-style-type: none;
   border-right: 1px solid #ffffff;
   white-space: nowrap;
+    width: a;
 }
 #navigation li a {
   display: block;
-  padding: 0 10px;
+  padding: 0 12.5px;
   font-size: 0.8em;
   font-weight: normal;
   text-transform: uppercase;
@@ -120,7 +124,7 @@ img.right {
 }
 #navigation .selected,
 #navigation a:hover {
-  background: #80b0da;
+  background: #0a2f4f;
   color: #ffffff;
   text-decoration: none;
 }
@@ -289,12 +293,13 @@ img.right {
 /* Footer styles */
 #footer {
   clear: both;
-  width: 760px;
-  padding: 5px 0;
-  /* margin: 0 1px; */
+  width: auto;
+  padding: 0%;
   font-size: 0.9em;
+  
   color: #f0f0f0;
   background: #467aa7;
+  overflow: hidden;
 }
 #footer p {
   padding: 0;
@@ -348,4 +353,39 @@ img.right {
   background-color: #fafbfc;
   color: #505050;
   line-height: 1.5em;
+}
+.flex-container {
+  display: flex;
+  height: auto;
+  flex-wrap: wrap;
+  overflow: auto;
+  
+}
+
+.flex-container > div {
+  padding-top: 10;
+  width: 300px;
+  margin: 10px;
+  text-align: flex;
+  line-height: 15px;
+  font-size: 15px;
+}
+
+.contents {
+  display: flex;
+  height: auto;
+  flex-wrap: wrap;
+  overflow: auto;
+  
+}
+
+.contents > div {
+ 
+  width: auto;
+  margin: 50px;
+  text-align: justify;
+  text-justify: inter-word;
+  line-height: 20px;
+
+  font-size: 1.1em;
 }
