--- a/monowar.css
+++ b/monowar.css
@@ -8,58 +8,12 @@ For more information, see http://andreasviklund.com/templates/andreas08/
   margin: 0;
   padding: 0;
 }
-body {
-  margin: 0;
-  padding: 0;
-  font: 76% Helvetica, Verdana, Arial, sans-serif;
-  line-height: 1.5em;
-  text-align: center;
-  color: #303030;
-  background: #ddd;
-}
-/*body {font:76% Verdana,Tahoma,Arial,sans-serif; line-height:1.4em; text-align:center; color:#303030; background:#e8eaec}*/
-a {
-  color: #467aa7;
-  font-weight: bold;
-  text-decoration: none;
-  background-color: inherit;
-}
-a:hover {
-  color: #2a5a8a;
-  text-decoration: none;
-  background-color: inherit;
-}
-a img {
-  border: none;
-}
-p {
-  padding: 0 0 1.6em 0;
-}
-p form {
-  margin-top: 0;
-  margin-bottom: 20px;
-}
-img.left,
-img.center,
-img.right {
-  padding: 4px;
-  border: 1px solid #a0a0a0;
-}
-img.left {
-  float: left;
-  margin: 0 12px 5px 0;
-}
-img.center {
-  display: block;
-  margin: 0 auto 5px auto;
-}
-img.right {
-  float: right;
-  margin: 0 0 5px 12px;
-}
 
 /* Header and navigation styles */
 #container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 760px;
   height: auto;
   margin: 0 auto;
@@ -67,30 +21,119 @@ img.right {
   background: #ffffff;
   color: #303030;
   box-shadow: 0 0 10px 5px #999;
-
 }
+
 #header {
+  display: flex;
   height: 110px;
   width: 760px;
   margin: 0 0 1px 0px;
   background: #467aa7;
   color: #ffffff;
+  justify-content: center;
+  align-items: center;
+  /* font: 12px/19px Arial, Helvetica, Sans-Serif; */
+
 }
-#header h1 {
-  padding: 35px 0 0 20px;
-  font-size: 2.4em;
+
+#main_logo img {
+  max-height: 100px;
+  float: left;
+  padding: 10px 20px 10px 20px;
+}
+
+#department h1 {
   background-color: inherit;
   color: #ffffff;
-  letter-spacing: -2px;
-  font-weight: normal;
+  /* letter-spacing: -1px; */
+  font: 25px Arial,
+    Helvetica,
+    Sans-Serif;
+  font-weight: bold;
+  width: 250px;
+  text-align: center;
 }
-#header h2 {
+
+#faculty h1 {
+  background-color: inherit;
+  color: #ffffff;
+  /* letter-spacing: -1px; */
+  font: 25px Arial,
+    Helvetica,
+    Sans-Serif;
+  font-weight: bold;
+  width: 250px;
+  text-align: center;
+
+}
+
+/* #header h2 {
   margin: 10px 0 0 40px;
   font-size: 1.4em;
   background-color: inherit;
   color: #f0f2f4;
   letter-spacing: -1px;
-  font-weight: normal;
+  font: 12px/19px Arial, Helvetica, Sans-Serif;
+  font-weight: bold;
+} */
+
+body {
+  margin: 0;
+  padding: 0;
+  font: 12px/19px Arial, Helvetica, Sans-Serif;
+  line-height: 1.5em;
+  text-align: center;
+  color: #303030;
+  background: #ddd;
+}
+
+/*body {font:76% Verdana,Tahoma,Arial,sans-serif; line-height:1.4em; text-align:center; color:#303030; background:#e8eaec}*/
+a {
+  color: #467aa7;
+  font-weight: bold;
+  text-decoration: none;
+  background-color: inherit;
+}
+
+a:hover {
+  color: #2a5a8a;
+  text-decoration: none;
+  background-color: inherit;
+}
+
+a img {
+  border: none;
+}
+
+p {
+  padding: 0 0 1.6em 0;
+}
+
+p form {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+img.left,
+img.center,
+img.right {
+  padding: 4px;
+  border: 1px solid #a0a0a0;
+}
+
+img.left {
+  float: left;
+  margin: 0 12px 5px 0;
+}
+
+img.center {
+  display: block;
+  margin: 0 auto 5px auto;
+}
+
+img.right {
+  float: right;
+  margin: 0 0 5px 12px;
 }
 
 #navigation {
@@ -100,15 +143,17 @@ img.right {
   width: auto;
   background: #578bb8;
   color: #ffffff;
-  
+
 }
+
 #navigation li {
   float: left;
   list-style-type: none;
   border-right: 1px solid #ffffff;
   white-space: nowrap;
-    width: a;
+  width: a;
 }
+
 #navigation li a {
   display: block;
   padding: 0 12.5px;
@@ -119,9 +164,11 @@ img.right {
   background-color: inherit;
   color: #ffffff;
 }
+
 * html #navigation a {
   width: 1%;
 }
+
 #navigation .selected,
 #navigation a:hover {
   background: #0a2f4f;
@@ -137,6 +184,7 @@ img.right {
   padding: 20px 0 0 20px;
   font-size: 1.1em;
 }
+
 #content h2 {
   display: block;
   margin: 0 0 16px 0;
@@ -146,29 +194,36 @@ img.right {
   color: #505050;
   background-color: inherit;
 }
+
 #content h2 a {
   font-weight: normal;
 }
+
 #content h3 {
   margin: 0 0 5px 0;
   font-size: 1.4em;
   letter-spacing: -1px;
 }
+
 #content a:hover,
 #subcontent a:hover {
   text-decoration: underline;
 }
+
 #content ul,
 #content ol {
   margin: 0 5px 16px 35px;
 }
+
 #content dl {
   margin: 0 5px 10px 25px;
 }
+
 #content dt {
   font-weight: bold;
   margin-bottom: 5px;
 }
+
 #content dd {
   margin: 0 0 10px 15px;
 }
@@ -180,6 +235,7 @@ img.right {
   padding: 20px 0 0 20px;
   font-size: 1.1em;
 }
+
 #contentWide h2 {
   display: block;
   margin: 0 0 16px 0;
@@ -189,29 +245,36 @@ img.right {
   color: #505050;
   background-color: inherit;
 }
+
 #contentWide h2 a {
   font-weight: normal;
 }
+
 #contentWide h3 {
   margin: 0 0 5px 0;
   font-size: 1.4em;
   letter-spacing: -1px;
 }
+
 #contentWide a:hover,
 #subcontent a:hover {
   text-decoration: underline;
 }
+
 #contentWide ul,
 #content ol {
   margin: 0 5px 16px 35px;
 }
+
 #contentWide dl {
   margin: 0 5px 10px 25px;
 }
+
 #contentWide dt {
   font-weight: bold;
   margin-bottom: 5px;
 }
+
 #contentWide dd {
   margin: 0 0 10px 15px;
 }
@@ -223,6 +286,7 @@ img.right {
   padding: 20px 20px 10px 0;
   line-height: 1.4em;
 }
+
 #subcontent h2 {
   display: block;
   margin: 0 0 15px 0;
@@ -233,6 +297,7 @@ img.right {
   color: #505050;
   background-color: inherit;
 }
+
 /*#subcontent p {margin:0 0 16px 0; font-size:0.9em;}*/
 #subcontent p {
   margin: 0 0 16px 0;
@@ -243,27 +308,33 @@ img.right {
   margin: 0 0 20px 8px;
   font-size: 0.9em;
 }
+
 .menublock li {
   list-style: none;
   display: block;
   padding: 2px;
   margin-bottom: 2px;
 }
+
 .menublock li a {
   font-weight: bold;
   text-decoration: none;
 }
+
 .menublock li a:hover {
   text-decoration: none;
 }
+
 .menublock li ul {
   margin: 3px 0 3px 15px;
   font-size: 1em;
   font-weight: normal;
 }
+
 .menublock li ul li {
   margin-bottom: 0;
 }
+
 .menublock li ul a {
   font-weight: normal;
 }
@@ -272,16 +343,19 @@ img.right {
 #searchbar {
   margin: 0 0 20px 0;
 }
+
 #searchbar form fieldset {
   margin-left: 10px;
   border: 0 solid;
 }
+
 #searchbar #s {
   height: 1.2em;
   width: 110px;
   margin: 0 5px 0 0;
   border: 1px solid #a0a0a0;
 }
+
 #searchbar #searchbutton {
   width: auto;
   padding: 0 1px;
@@ -296,21 +370,24 @@ img.right {
   width: auto;
   padding: 0%;
   font-size: 0.9em;
-  
+
   color: #f0f0f0;
   background: #467aa7;
   overflow: hidden;
 }
+
 #footer p {
   padding: 0;
   margin: 0;
   text-align: center;
 }
+
 #footer a {
   color: #f0f0f0;
   background-color: inherit;
   font-weight: bold;
 }
+
 #footer a:hover {
   color: #ffffff;
   background-color: inherit;
@@ -322,30 +399,38 @@ img.right {
   float: left;
   width: 48%;
 }
+
 .splitcontentright {
   float: right;
   width: 48%;
 }
+
 .clear {
   clear: both;
 }
+
 .small {
   font-size: 0.9em;
 }
+
 .hide {
   display: none;
 }
+
 .textcenter {
   text-align: center;
 }
+
 .textright {
   text-align: right;
 }
+
 .important {
   color: #f02025;
   background-color: inherit;
   font-weight: bold;
 }
+
 .box {
   margin: 0 0 20px 0;
   padding: 10px;
@@ -354,15 +439,16 @@ img.right {
   color: #505050;
   line-height: 1.5em;
 }
+
 .flex-container {
   display: flex;
   height: auto;
   flex-wrap: wrap;
   overflow: auto;
-  
+
 }
 
-.flex-container > div {
+.flex-container>div {
   padding-top: 10;
   width: 300px;
   margin: 10px;
@@ -376,11 +462,11 @@ img.right {
   height: auto;
   flex-wrap: wrap;
   overflow: auto;
-  
+
 }
 
-.contents > div {
- 
+.contents>div {
+
   width: auto;
   margin: 50px;
   text-align: justify;
