--- a/monowar.css
+++ b/monowar.css
@@ -14,23 +14,26 @@ For more information, see http://andreasviklund.com/templates/andreas08/
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 760px;
+  /* width: 760px; */
+  width: 930px;
   height: auto;
   margin: 0 auto;
   text-align: left;
   background: #ffffff;
   color: #303030;
   box-shadow: 0 0 10px 5px #999;
+  font: 14px Arial, Helvetica, Sans-Serif;
+
 }
 
 #header {
   display: flex;
   height: 110px;
-  width: 760px;
+  width: 930px;
   margin: 0 0 1px 0px;
   background: #467aa7;
   color: #ffffff;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   /* font: 12px/19px Arial, Helvetica, Sans-Serif; */
 
@@ -52,6 +55,11 @@ For more information, see http://andreasviklund.com/templates/andreas08/
   font-weight: bold;
   width: 250px;
   text-align: center;
+}
+
+#border_dept_fac {
+  border-left: 2px solid white;
+  height: 70px;
 }
 
 #faculty h1 {
@@ -114,7 +122,7 @@ p form {
   margin-bottom: 20px;
 }
 
-img.left,
+/* img.left,
 img.center,
 img.right {
   padding: 4px;
@@ -134,9 +142,9 @@ img.center {
 img.right {
   float: right;
   margin: 0 0 5px 12px;
-}
+} */
 
-#navigation {
+.navigation {
   height: 2.2em;
   line-height: 2.2em;
   margin: 0;
@@ -145,17 +153,25 @@ img.right {
   color: #ffffff;
 
 }
-
-#navigation li {
-  float: left;
-  list-style-type: none;
-  border-right: 1px solid #ffffff;
-  white-space: nowrap;
-  width: a;
+.navigation ul {
+  display: flex;
 }
 
-#navigation li a {
-  display: block;
+.navigation li {
+  float: left;
+  list-style-type: none;
+  /* border-right: 1px solid #ffffff; */
+  /* white-space: nowrap; */
+  flex: auto;
+  text-align: center;
+}
+
+.nav_border {
+  border-left: 2px solid white;
+}
+
+.navigation li a {
+  /* display: block; */
   padding: 0 12.5px;
   font-size: 0.8em;
   font-weight: normal;
@@ -165,12 +181,12 @@ img.right {
   color: #ffffff;
 }
 
-* html #navigation a {
+* html .navigation a {
   width: 1%;
 }
 
-#navigation .selected,
-#navigation a:hover {
+.navigation .selected,
+.navigation li:hover {
   background: #0a2f4f;
   color: #ffffff;
   text-decoration: none;
@@ -179,10 +195,11 @@ img.right {
 /* Content styles */
 /*#content {float:left; width:530px; font-size:0.9em; padding:20px 0 0 20px;}*/
 #content {
-  float: left;
+  display: flex;
   width: 530px;
   padding: 20px 0 0 20px;
   font-size: 1.1em;
+  flex-direction: column;
 }
 
 #content h2 {
@@ -230,14 +247,14 @@ img.right {
 
 /* Content styles */
 #contentWide {
-  float: left;
+  /* float: left; */
   width: 700px;
   padding: 20px 0 0 20px;
   font-size: 1.1em;
 }
 
 #contentWide h2 {
-  display: block;
+  /* display: block; */
   margin: 0 0 16px 0;
   font-size: 1.7em;
   font-weight: normal;
@@ -368,12 +385,16 @@ img.right {
 #footer {
   clear: both;
   width: auto;
-  padding: 0%;
+  height: 100px;
   font-size: 0.9em;
 
-  color: #f0f0f0;
-  background: #467aa7;
+  /* color: #f0f0f0; */
+  /* background: #467aa7; */
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 #footer p {
@@ -383,7 +404,7 @@ img.right {
 }
 
 #footer a {
-  color: #f0f0f0;
+  /* color: #f0f0f0; */
   background-color: inherit;
   font-weight: bold;
 }
@@ -440,38 +461,95 @@ img.right {
   line-height: 1.5em;
 }
 
-.flex-container {
+.bio {
   display: flex;
-  height: auto;
-  flex-wrap: wrap;
-  overflow: auto;
-
+  justify-content: space-around;
+  align-items: center;
 }
 
-.flex-container>div {
-  padding-top: 10;
-  width: 300px;
-  margin: 10px;
+#profile_img {
+  margin: 20px 0 20px 20px;
+  width: 200px;
+}
+
+.bio > div {
+  width: 290px;
   text-align: flex;
   line-height: 15px;
   font-size: 15px;
 }
 
+#affiliation {
+  width: 350px;
+}
+
+#affiliation > li {
+  padding: 0 0 5px 0;
+}
+
+#external_links > li {
+  padding: 0 0 5px 0;
+}
+
 .contents {
   display: flex;
   height: auto;
-  flex-wrap: wrap;
-  overflow: auto;
+  /* flex-wrap: wrap; */
+  /* overflow: auto; */
+  flex-direction: column;
 
 }
 
 .contents>div {
 
   width: auto;
-  margin: 50px;
+  margin: 50px 50px 0 50px;
   text-align: justify;
   text-justify: inter-word;
   line-height: 20px;
 
   font-size: 1.1em;
+}
+
+h3.content_separation {
+  padding-bottom: 5px;
+  flex-grow: 1;
+  margin: 30px 50px -25px 50px;
+  border-style: solid;
+  border-width: 0 0 1px 0;
+  color: #666;
+  border-color: #aaa;;
+
+}
+
+#recent_news > ul {
+  padding-left: 50px;
+}
+#recent_news > ul > li {
+  padding: 0 0 5px 0;
+}
+
+#alumni-worked {
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#alumni-worked > a {
+  margin: -10px 15px 0px 15px;
+}
+
+#funded-by {
+  height: 240px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#funded-by > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
