--- a/monowar.css
+++ b/monowar.css
@@ -597,3 +597,43 @@ h3.content_separation {
   font-style: italic;
   font-weight: bold;
 }
+
+
+/* CSS for publication pop-up */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 25% auto;
+  padding: 20px;
+  width: 60%;
+  border-radius: 10px; /* Rounded corners */
+  text-align: left;
+  font-size: 13px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+.publication-item {
+  cursor: pointer;
+}
